test/typecheck/bad-compare-type-mismatch-2.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module
  (func
    f32.const 0
    i32.const 0
    f32.lt
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-compare-type-mismatch-2.txt:7:5: error: type mismatch in f32.lt, expected [f32, f32] but got [f32, i32]
    f32.lt
    ^^^^^^
;;; STDERR ;;)
